kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-api

spec:
  replicas: 4

  selector:
    matchLabels:
      app: bookshelf-api

  template:
    metadata:
      labels:
        app: bookshelf-api

    spec:
      containers:
        - name: bookshelf-api
          image: saad9375/bookshelf-api:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
