kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf-api

spec:
  selector:
    app: bookshelf-api

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
