kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshelf-ingress

spec:
  defaultBackend:
    service:
      name: bookshelf-api
      port:
        number: 80
